...
                  <Button
                    placement="header"
                    label={moreOptions}
                    icon="more"
                    expanded={detail.menu}
                    onPress={detail.toggleMenu}
                    testID="record-menu"
                  />
                ) : null}
              </View>
            )
          : () => null,
    }),
...
